--- a/src/style.css
+++ b/src/style.css
@@ -16,11 +16,11 @@ body {
 }
 
 #content {
-  flex: 1;
   height: 100%;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  flex-direction: row;
 }
 
 .wrapper {
@@ -50,5 +50,8 @@ input.name {
   display: grid;
 } */
 
-input[type='checkbox'] {
+.board > div {
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
 }
