--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,22 @@ body {
   border: 1px solid black;
 }
 
+.animateAttack {
+  animation: pulse 1s ease-in 1;
+}
+
+@keyframes pulse {
+  0% {
+    font-size: 16px;
+  }
+  50% {
+    font-size: 24px;
+  }
+  100% {
+    font-size: 16px;
+  }
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -56,6 +72,10 @@ body {
 }
 
 .node {
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   &:hover {
     background-color: #d3d3d3;
   }
