--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,10 @@ input.ship {
   background-color: red;
 }
 
+.placed {
+  background-color: blue;
+}
+
 @keyframes pulse {
   0% {
     font-size: 16px;
