Ready button on placement switch player

--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,9 @@ input.ship {
   &:active {
     background-color: gray;
   }
+  &.clicked {
+    background-color: darkgray;
+  }
 }
 
 .animateAttack {
